updated with roi

--- a/.env
+++ b/.env
@@ -49,3 +49,12 @@ MONGODB_PASSWORD=lKoTz617iLRzRJYx
 
 TRON_API_KEY=980d4ced-e659-4a28-86e3-916e95bd6556
 TRX_WINGO_GAME_TIME_SS=51
+
+
+STAKE_ROI_1 = 4.0
+
+STAKE_ROI_3 = 4.5
+
+STAKE_ROI_6 = 5.0
+
+STAKE_ROI_12 = 5.5
