--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "92lottery",
-    "version": "1.0.0",
+    "name": "cloudscape",
+    "version": "2.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "database": "nodemon --exec ./node_modules/.bin/babel-node src/modal/CreateDatabase.js",
@@ -14,10 +14,10 @@
         "@babel/core": "7.15.5",
         "@babel/node": "7.15.4",
         "@babel/preset-env": "7.15.6",
-        "92lottery": "file:",
         "axios": "^1.6.7",
         "babel-core": "^7.0.0-bridge.0",
         "body-parser": "^1.20.2",
+        "cloudscape": "file:",
         "connect-redis": "^8.0.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
