--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
         "ejs": "^3.1.8",
         "express": "^4.17.1",
         "express-session": "^1.18.1",
+        "formidable": "^3.5.2",
         "i18n": "^0.15.1",
         "iconv-lite": "^0.6.3",
         "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
         "md5": "^2.3.0",
         "moment": "^2.30.1",
+        "multer": "^1.4.5-lts.2",
         "mysql2": "^3.12.0",
         "node-cron": "^3.0.0",
         "nodemon": "^3.1.9",
