--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "cloudscape",
     "version": "2.0.0",
     "description": "",
-    "main": "app",
+    "main": "ecosystem.config.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "pm2 start ecosystem.config.js --env production"
