--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "app",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "pm2 start ecosystem.config.js --env production"
+        "database": "nodemon --exec ./node_modules/.bin/babel-node src/modal/CreateDatabase.js",
+        "start": "nodemon --exec ./node_modules/.bin/babel-node server.js"
     },
     "author": "",
     "license": "ISC",
@@ -34,6 +35,7 @@
         "multer": "^1.4.5-lts.2",
         "mysql2": "^3.12.0",
         "node-cron": "^3.0.0",
+        "nodemon": "^3.1.9",
         "querystring": "^0.2.1",
         "request": "^2.88.2",
         "socket.io": "^4.4.1",
