--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "ecosystem.config.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "database": "pm2 start ./node_modules/.bin/babel-node --name database -- src/modal/CreateDatabase.js --watch",
-        "start": "pm2 start ./node_modules/.bin/babel-node --name app -- server.js --watch"
+        "start": "pm2 start ecosystem.config.js --env production"
     },
     "author": "",
     "license": "ISC",
