--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "ecosystem.config.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "pm2 start ecosystem.config.js --env production"
+        "database": "nodemon --exec ./node_modules/.bin/babel-node src/modal/CreateDatabase.js",
+        "start": "nodemon --exec ./node_modules/.bin/babel-node server.js"
     },
     "author": "",
     "license": "ISC",
@@ -23,6 +24,7 @@
         "dotenv": "^16.4.5",
         "ejs": "^3.1.8",
         "express": "^4.17.1",
+        "express-fileupload": "^1.5.1",
         "express-session": "^1.18.1",
         "formidable": "^3.5.2",
         "i18n": "^0.15.1",
@@ -34,6 +36,7 @@
         "multer": "^1.4.5-lts.2",
         "mysql2": "^3.12.0",
         "node-cron": "^3.0.0",
+        "nodemon": "^3.1.9",
         "querystring": "^0.2.1",
         "request": "^2.88.2",
         "socket.io": "^4.4.1",
